--- a/index.html
+++ b/index.html
@@ -7,14 +7,31 @@
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/home.css">
     <title>Initiator Navodayans</title>
+    <style>
+    body{
+    postion: relative;
+    top: 55px;
+    }
+
+    </style>
 </head>
 <body>
     <header class="Header space-between">
-  
-        <div class="logo">
-            <span>I</span>nitiators<span>N</span>avodayans
-        </div>
 
+        <div class="logo">
+          <table>
+            <tr>
+              <td> <img class="logo-img" src="assets/Initiator.png" alt="logo"></td>
+       <td>
+         <th>
+           <span>I</span>nitiators<span>N</span>avodayans
+        </th>
+       </td>
+            </tr>
+        </table>
+          </div>
+
+  <div class="">
     <nav id="navbar">
       <ul class="links">
         <li><a href="index.html">Home</a></li>
@@ -24,18 +41,20 @@
       </ul>
     </nav>
     <button className="toggle">Menu</button>
+
+  </div>
   </header>
-    
+
     <h1 class="Welcome"> &#x2192; </h1>
     <div class="content">
         <div class="select">
             <h2>Join us</h2>
             <ul>
                 <li><a href="./pages/mentor_signin.html">Provide Mentorship</a></li>
-                <li><a href="./pages/student_pages/student_signin.html" >Get Mentorship</a></li>            
+                <li><a href="./pages/student_pages/student_signin.html" >Get Mentorship</a></li>
             </ul>
         </div>
-    
+
         <div class="vision">
             <h2>Our Vision</h2>
             <p>
@@ -51,6 +70,9 @@
        Copyright &copy; 2022
        <a href="./pages/joinus.html">Join us</a>
    </footer>
+
+
+
 </body>
 <script src="./scripts/app.js"></script>
 <script src="./scripts/navbar.js"></script>
